--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -21,9 +21,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Lint and Test
-        run: |
-          npm run lint
+      - name: Test
+        run:
           npm test
 
       - name: Build Docker Image
